<resources>
    <string name="app_name">QuickBoxRestApiExample</string>

    <!--
    // Util
    -->
    <string name="auth_hmac_sha_body">application_id={0}&amp;auth_key={1}&amp;nonce={2}&amp;timestamp={3}</string>
    <string name="auth_hmac_sha_body_with_user">application_id={0}&amp;auth_key={1}&amp;nonce={2}&amp;timestamp={3}&amp;user[login]={4}&amp;user[password]={5}</string>

    <!--
	//  Prompt
	-->
    <string name="prompt_user_login">Login</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirm_password">Confirme Senha</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nome Completo</string>
    <string name="prompt_website">Website</string>
    <string name="prompt_tag_list">Tags(separe por virgulas(,))</string>
    <string name="prompt_phone">Telefone</string>

    <!--
	//  Action
	-->
    <string name="warning_invalid_email">Email inválido</string>
    <string name="warning_required">Obrigatório</string>
    <string name="warning_diferent_passwords">Senhas Diferentes</string>
    <string name="warning_generic">Erro</string>
    <string name="warning_unknown">Ocorreu algúm erro, tente novamente…</string>

    <!--
	//  Action
	-->
    <string name="action_ok">OK</string>
    <string name="action_login">Entrar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_send">Enviar</string>
    <string name="action_confirm">Confirmar</string>
    <string name="action_signup">Cadastrar-se</string>
    <string name="action_update_user">Editar Dados</string>
    <string name="action_request_reset_password">Esqueci minha senha</string>

    <!--
	//  Label
	-->
    <string name="label_success">Sucesso!</string>
    <string name="label_check_email">Verifique seu email.</string>
    <string name="label_reset_password">Resetar Senha</string>
    <string name="label_user_updated">Seus dados foram atualizados com sucesso!</string>
</resources>
